# toisan-lang

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: pytest.yml
docs/: index.md
search/: search_index.json
src/toisan_lang/: __main__.py  grammar.py  keyword.py
tests/: test_compiler.py  test_expression.py  test_grammar.py  test_keyword.py  test_token.py
tests/helpers/compiler/: assign_statement.py  if_statement.py
tests/testcases/compiler/: as_long_as_statement.py  assign_statement.py  if_statement.py  util.py
toisan_lang/: __init__.py  __main__.py  compiler.py  grammar.py  keyword.py  node.py
